fix: add support for streaming output for commands with `-f` flag in CommandRunner